rama segunda Preentrega modificado con BT

--- a/pages/streaming.html
+++ b/pages/streaming.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Gamer's Shire</title>
         <link rel="shortcut icon" href="../assets/imagenes/Logo final.png" type="icono pagina" />
+        <link rel="stylesheet" href="./css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
@@ -89,30 +90,28 @@
                 <a href="https://www.twitch.tv/chillhopmusic" target="_blank">ChillhopMusic</a>
             </div>
         </section>
-        <footer class="elFooter">
-            <div>
-                <p class="parrafos">Nuestras redes</p>
-                <a href="https://www.instagram.com/" class="linksExternos target="_blank">Instragram</a>
-                <img src="../assets/imagenes/Instagram.svg" class="imagenesVectorizadas" alt="Instagram">
-                <a href="https://www.twitch.tv/" class="linksExternos target="_blank">Twitch</a>
-                <img src="../assets/imagenes/twitch6.svg" class="imagenesVectorizadas" alt="Twitch">
-            </div>
-            <div class="absoluteFooter1">
-                <p class="parrafos" >Mas comunidades</p>
-                <a href="https://www.reddit.com/" class="linksExternos target="_blank">Reddit</a>
-                <img src="../assets/imagenes/reddit2.svg" class="imagenesVectorizadas" alt="Reddit">
-                <a href="https://store.steampowered.com/" class="linksExternos target="_blank">Steam</a>
-                <img src="../assets/imagenes/steam.svg" class="imagenesVectorizadas" alt="Steam">
-            </div>
-            <div>
-                <ul class="absoluteCondiciones">
-                    <li>
-                        <a class="linksExternos href="" >Condiciones de uso</a>
-                        <a class="linksExternos href="">Aviso de privacidad </a>
-                    </li>
-                </ul>
-                <p class="parrafos absoluteReservados">Todos los derechos reservados - JDL®</p>
+        <footer class="container-fluid flexFooter2">
+            <div class="row">
+                <div class="col">
+                    <p class="parrafos">Nuestras redes</p>
+                    <a href="https://www.instagram.com/" class="linksExternos target="_blank">Instragram</a>
+                    <img src="./assets/imagenes/Instagram.svg" class="imagenesVectorizadas" alt="Instagram">
+                    <a href="https://www.twitch.tv/" class="linksExternos target="_blank">Twitch</a>
+                    <img src="./assets/imagenes/twitch6.svg" class="imagenesVectorizadas" alt="Twitch">
+                    <a href="https://www.reddit.com/" class="linksExternos target="_blank">Reddit</a>
+                    <img src="./assets/imagenes/reddit2.svg" class="imagenesVectorizadas" alt="Reddit">
+                    <a href="https://store.steampowered.com/" class="linksExternos target="_blank">Steam</a>
+                    <img src="./assets/imagenes/steam.svg" class="imagenesVectorizadas" alt="Steam">
+                </div>
+                <div class="col">
+                    <p class="parrafos">Todos los derechos reservados - JDL®</p>
+                </div>
+                <div class="col">
+                    <a class="linksExternos href="" >Condiciones de uso</a>
+                    <a class="linksExternos href="">Aviso de privacidad </a>
+                </div>
             </div>
         </footer>
+        <script src="./js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
