--- a/index.html
+++ b/index.html
@@ -6,130 +6,148 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Gamer's Shire</title>
         <link rel="shortcut icon" href="./assets/imagenes/Logo final.png" type="icono pagina" />
+        <link rel="stylesheet" href="./css/bootstrap.min.css">
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-        <header class="elHeaderBox">
-            <h1>The Gamer's Shire</h1>
-            <div>
-                <img src="./assets/imagenes/Logo final.png" class="elLogo"  alt="logo">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid elHeaderBox">
+              <button class="navbar-toggler"  type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Categorias </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                </ul>
+                <a class="navbar-brand" href="#"> <img src="./assets/imagenes/Logo final.png" alt="" width="100" height="100"></a>
+              </div>
             </div>
-            <nav>
-                <div class="desplegarNav">
-                    <button class="botonNav">Categorias</button>
-                    <div class="contenidoNav">
-                        <li> <a href="#">Inicio </a></li>
-                        <li> <a href="./pages/gaming.html">Gaming</a></li>
-                        <li> <a href="./pages/Videojuegos.html">Videojuegos</a></li>
-                        <li> <a href="./pages/Streaming.html">Streaming</a></li>
-                        <li> <a href="./pages/contacto.html">contacto</a></li>
+          </nav>
+        
+        <main>
+            <h3 class="subtitulos3 boxSubtitulos">Streaming mas vistos por la comunidad</h3>
+            <section class="container contenedorFlex">
+                <div class="row">
+                    <div class="col generalBoxes">
+                        <img src="./assets/imagenes/A_Seagull_portada.png" class="boxImg" alt="A_Seagull - Overwatch 2 competitivo">
+                        <h4 class="subtitulos4">A_Seagull - Overwatch 2 competitivo</h4>
+                        <a href="https://www.twitch.tv/a_seagull" class="linksExternos" target="_blank">A_Seagull Twitch</a>
+                    </div>
+                    <div class="col">
+                        <img src="./assets/imagenes/Ibai.jpg" class="boxImg" alt="ibai - Deportes y entretenimiento">
+                        <h4 class="subtitulos4">ibai - Deportes y entretenimiento</h4>
+                        <a href="https://www.twitch.tv/ibai" class="linksExternos target="_blank">ibai Twitch</a>
+                    </div>
+                    <div class="col">
+                        <img src="./assets/imagenes/luquitarodriguez.png" class="boxImg" alt="luquitarodriguez - humor y entretenimiento">
+                        <h4 class="subtitulos4">luquitarodriguez - humor y entretenimiento</h4>
+                        <a href="https://www.twitch.tv/luquitarodriguez" class="linksExternos target="_blank"> luquitarodriguez Twitch</a>
                     </div>
                 </div>
-            </nav>
-        </header>
-        <main>
-            <h3 class="subtitulos3">Streaming mas vistos por la comunidad</h3>
-            <section>
-                <div class="generalBoxes">
-                    <img src="./assets/imagenes/A_Seagull_portada.png" class="boxImg" alt="A_Seagull - Overwatch 2 competitivo">
-                    <h4 class="subtitulos4">A_Seagull - Overwatch 2 competitivo</h4>
-                    <a href="https://www.twitch.tv/a_seagull" class="linksExternos" target="_blank">A_Seagull Twitch</a>
-                </div>
-                <div class="absoluteIbai">
-                    <img src="./assets/imagenes/Ibai.jpg" class="boxImg" alt="ibai - Deportes y entretenimiento">
-                    <h4 class="subtitulos4">ibai - Deportes y entretenimiento</h4>
-                    <a href="https://www.twitch.tv/ibai" class="linksExternos target="_blank">ibai Twitch</a>
-                </div>
-                <div class="absoluteLuquita">
-                    <img src="./assets/imagenes/luquitarodriguez.png" class="boxImg" alt="luquitarodriguez - humor y entretenimiento">
-                    <h4 class="subtitulos4">luquitarodriguez - humor y entretenimiento</h4>
-                    <a href="https://www.twitch.tv/luquitarodriguez" class="linksExternos target="_blank"> luquitarodriguez Twitch</a>
-                </div>
+ 
             </section>
 
-            <h3 class="subtitulos3">Mision</h3>
-            <p class="parrafos">En The Gamer's Shire trabajamos para brindarte un lugar donde puedas encontrar todo lo relacionado con tus juegos favoritos. 
-                Nos enfocamos en reunir todo su contenido en un solo lugar, contamos con streamer especializados, tu lore favorito, reseñas, proximos eventos y mucho mas.
-                Tambien podes conseguir juegos, hardware y tus consolas favoritas. Unite a la comunidad.</p>
+            <h3 class="subtitulos3 boxSubtitulos">Mision</h3>
+            <div class="contenedorFlex">
+                <p class="parrafos">En The Gamer's Shire trabajamos para brindarte un lugar donde puedas encontrar todo lo relacionado con tus juegos favoritos. 
+                    Nos enfocamos en reunir todo su contenido en un solo lugar, contamos con streamer especializados, tu lore favorito, reseñas, proximos eventos y mucho mas.
+                    Tambien podes conseguir juegos, hardware y tus consolas favoritas. Unite a la comunidad.</p>
+            </div>
+ 
         </main>
-        <section>
-            <h3 class="subtitulos3">Arma tu Setup</h3>
-            <div>
-                <img src="./assets/imagenes/nvidia gforce 3060.webp" class="boxImg alt="placa de video">
-                <p class="parrafos">Nvidia Gigabyte GeForce RTX 30 Series RTX 3060</p>
-                <a href="https://www.mercadolibre.com.ar/placa-de-video-nvidia-gigabyte-gaming-geforce-rtx-30-series-rtx-3060-gv-n3060gaming-oc-12gd-rev-10-oc-edition-12gb/p/MLA18618581?pdp_filters=category:MLA1658#searchVariation=MLA18618581&position=8&search_layout=grid&type=product&tracking_id=3868caae-c69d-4b9d-bad2-60e4cbe7f5c3" class="linksExternos target="_blank">Nvidia GeForce RTX 3060</a>
-            </div>
-            <div class="absoluteAuriculares">
-                <img src="./assets/imagenes/auriculares hyperx.webp" class="boxImg alt="Auriculares hyperx">
-                <p class="parrafos">Auriculares inalámbricos HyperX Cloud Flight con luz rojo</p>
-                <a href="https://www.mercadolibre.com.ar/auriculares-gamer-inalambricos-hyperx-cloud-flight-negro-con-luz-rojo-led/p/MLA15313319?matt_tool=80203390&matt_word=&matt_source=google&matt_campaign_id=14545592783&matt_ad_group_id=125221141365&matt_match_type=&matt_network=g&matt_device=c&matt_creative=544135253008&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=139868337&matt_product_id=MLA15313319-product&matt_product_partition_id=1701193342077&matt_target_id=aud-1659384947926:pla-1701193342077&gclid=Cj0KCQjwnbmaBhD-ARIsAGTPcfUzWhfTRg0z8VMl7XHecWAmXPzCI0vPCxbHXOP4QQ4oLNykCRLmdZwaArrOEALw_wcB" class="linksExternos target="_blank">Auriculares HyperX</a>
-            </div>
-            <div class="absoluteMonitor">
-                <img src="./assets/imagenes/monitor.webp" class="boxImg alt="Monitor Gigabyte 27''">
-                <p class="parrafos">Monitor gamer Gigabyte G27F led 27 " negro 100V/240V</p>
-                <a href="https://www.mercadolibre.com.ar/monitor-gamer-gigabyte-g27f-led-27-negro-100v240v/p/MLA16550870?pdp_filters=category:MLA14407#searchVariation=MLA16550870&position=4&search_layout=grid&type=product&tracking_id=011c78d9-179e-4896-8996-93dd791dee02" class="linksExternos target="_blank">Monitor gamer Gigabyte</a>
-            </div>
-        </section>
-        <section>
-            <h3 class="subtitulos3">Juegos recomendados del editor</h3>
-            <div>
-                <img src="./assets/imagenes/Elden ring.jpg" class="boxImg alt="Elden Ring">
-                <h4 class="subtitulos4">Elden Ring</h4>
-                <a href="https://store.steampowered.com/app/1245620/ELDEN_RING/" class="linksExternos target="_blank"> Elden Ring -   Steam</a>
-            </div>
-            <div class="absoluteZomboid">
-                <img src="./assets/imagenes/Proyect zomboid.jpg" class="boxImg alt="Proyect Zomboid">
-                <h4 class="subtitulos4">Proyect Zomboid</h4>
-                <a href="https://store.steampowered.com/app/108600/Project_Zomboid/"  class="linksExternos target="_blank">Proyect Zomboid - Steam</a>
-            </div>
-            <div class="absoluteResident">
-                <img src="./assets/imagenes/resident evil 2 remake.jpg" class="boxImg alt="Resident evil 2">
-                <h4 class="subtitulos4">Resident Evil 2: Remake</h4>
-                <a href="https://store.steampowered.com/app/883710/Resident_Evil_2/"  class="linksExternos target="_blank">Resident Evil 2: Remake - Steam</a>
+        <h3 class="subtitulos3 boxSubtitulos">Arma tu Setup</h3>
+        <section class="container contenedorFlex">
+            <div class="row">
+                <div class="col">
+                    <img src="./assets/imagenes/nvidia gforce 3060.webp" class="boxImg alt="placa de video">
+                    <p class="parrafos">Nvidia Gigabyte GeForce RTX 30 Series RTX 3060</p>
+                    <a href="https://www.mercadolibre.com.ar/placa-de-video-nvidia-gigabyte-gaming-geforce-rtx-30-series-rtx-3060-gv-n3060gaming-oc-12gd-rev-10-oc-edition-12gb/p/MLA18618581?pdp_filters=category:MLA1658#searchVariation=MLA18618581&position=8&search_layout=grid&type=product&tracking_id=3868caae-c69d-4b9d-bad2-60e4cbe7f5c3" class="linksExternos target="_blank">Nvidia GeForce RTX 3060</a>
+                </div>
+                <div class="col">
+                    <img src="./assets/imagenes/auriculares hyperx.webp" class="boxImg alt="Auriculares hyperx">
+                    <p class="parrafos">Auriculares inalámbricos HyperX Cloud Flight con luz rojo</p>
+                    <a href="https://www.mercadolibre.com.ar/auriculares-gamer-inalambricos-hyperx-cloud-flight-negro-con-luz-rojo-led/p/MLA15313319?matt_tool=80203390&matt_word=&matt_source=google&matt_campaign_id=14545592783&matt_ad_group_id=125221141365&matt_match_type=&matt_network=g&matt_device=c&matt_creative=544135253008&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=139868337&matt_product_id=MLA15313319-product&matt_product_partition_id=1701193342077&matt_target_id=aud-1659384947926:pla-1701193342077&gclid=Cj0KCQjwnbmaBhD-ARIsAGTPcfUzWhfTRg0z8VMl7XHecWAmXPzCI0vPCxbHXOP4QQ4oLNykCRLmdZwaArrOEALw_wcB" class="linksExternos target="_blank">Auriculares HyperX</a>
+                </div>
+                <div class="col">
+                    <img src="./assets/imagenes/monitor.webp" class="boxImg alt="Monitor Gigabyte 27''">
+                    <p class="parrafos">Monitor gamer Gigabyte G27F led 27 " negro 100V/240V</p>
+                    <a href="https://www.mercadolibre.com.ar/monitor-gamer-gigabyte-g27f-led-27-negro-100v240v/p/MLA16550870?pdp_filters=category:MLA14407#searchVariation=MLA16550870&position=4&search_layout=grid&type=product&tracking_id=011c78d9-179e-4896-8996-93dd791dee02" class="linksExternos target="_blank">Monitor gamer Gigabyte</a>
+                </div>
             </div>
         </section>
-        <section>
-            <h3 class="subtitulos3">Lore mas visto por la comunidad</h3>
-            <div>
-                <img src="./assets/imagenes/Wow 1.jpg" class="boxImg alt="Lore World of Warcraft">
-                <br>
-                <a href="https://wow.fandom.com/es/wiki/Historia_de_Warcraft#L%C3%ADnea_Temporal"  class="linksExternos target="_blank">World of Warcraft</a>
+        <h3 class="subtitulos3 boxSubtitulos">Juegos recomendados del editor</h3>
+        <section class="container contenedorFlex">
+            <div class="row">
+                <div class="col">
+                    <img src="./assets/imagenes/Elden ring.jpg" class="boxImg alt="Elden Ring">
+                    <h4 class="subtitulos4">Elden Ring</h4>
+                    <a href="https://store.steampowered.com/app/1245620/ELDEN_RING/" class="linksExternos target="_blank"> Elden Ring -   Steam</a>
+                </div>
+                <div class="col">
+                    <img src="./assets/imagenes/Proyect zomboid.jpg" class="boxImg alt="Proyect Zomboid">
+                    <h4 class="subtitulos4">Proyect Zomboid</h4>
+                    <a href="https://store.steampowered.com/app/108600/Project_Zomboid/"  class="linksExternos target="_blank">Proyect Zomboid - Steam</a>
+                </div>
+                <div class="col">
+                    <img src="./assets/imagenes/resident evil 2 remake.jpg" class="boxImg alt="Resident evil 2">
+                    <h4 class="subtitulos4">Resident Evil 2: Remake</h4>
+                    <a href="https://store.steampowered.com/app/883710/Resident_Evil_2/"  class="linksExternos target="_blank">Resident Evil 2: Remake - Steam</a>
+                </div>
             </div>
-            <div class="absoluteCyberpunk">
-                <img src="./assets/imagenes/cyberpunk 2077.jpg" class="boxImg alt="cyberpunk 2077">
-                <br>
-                <a href="https://cyberpunk.fandom.com/es/wiki/Cyberpunk_2077" class="linksExternos target="_blank">Cyberpunk 2077</a>
-            </div>
-            <div class="absolutePoe">
-                <img src="./assets/imagenes/Poe.jpg" class="boxImg" alt="Path of Exile">
-                <br>
-                <a href="https://www.mediavida.com/foro/poe/lore-videos-castellano-historia-juego-580512" class="linksExternos target="_blank">Path of Exile</a>
-            </div>
+
         </section>
-        <footer class="elFooter">
-            <div>
-                <p class="parrafos">Nuestras redes</p>
-                <a href="https://www.instagram.com/" class="linksExternos target="_blank">Instragram</a>
-                <img src="./assets/imagenes/Instagram.svg" class="imagenesVectorizadas" alt="Instagram">
-                <a href="https://www.twitch.tv/" class="linksExternos target="_blank">Twitch</a>
-                <img src="./assets/imagenes/twitch6.svg" class="imagenesVectorizadas" alt="Twitch">
+        <h3 class="subtitulos3 boxSubtitulos">Lore mas visto por la comunidad</h3>
+        <section class="container contenedorFlex">
+            <div class="row">
+                <div class="col">
+                    <img src="./assets/imagenes/Wow 1.jpg" class="boxImg alt="Lore World of Warcraft">
+                    <br>
+                    <a href="https://wow.fandom.com/es/wiki/Historia_de_Warcraft#L%C3%ADnea_Temporal"  class="linksExternos target="_blank">World of Warcraft</a>
+                </div>
+                <div class="col">
+                    <img src="./assets/imagenes/cyberpunk 2077.jpg" class="boxImg alt="cyberpunk 2077">
+                    <br>
+                    <a href="https://cyberpunk.fandom.com/es/wiki/Cyberpunk_2077" class="linksExternos target="_blank">Cyberpunk 2077</a>
+                </div>
+                <div class="col">
+                    <img src="./assets/imagenes/Poe.jpg" class="boxImg" alt="Path of Exile">
+                    <br>
+                    <a href="https://www.mediavida.com/foro/poe/lore-videos-castellano-historia-juego-580512" class="linksExternos target="_blank">Path of Exile</a>
+                </div>
             </div>
-            <div class="absoluteFooter1">
-                <p class="parrafos" >Mas comunidades</p>
-                <a href="https://www.reddit.com/" class="linksExternos target="_blank">Reddit</a>
-                <img src="./assets/imagenes/reddit2.svg" class="imagenesVectorizadas" alt="Reddit">
-                <a href="https://store.steampowered.com/" class="linksExternos target="_blank">Steam</a>
-                <img src="./assets/imagenes/steam.svg" class="imagenesVectorizadas" alt="Steam">
-            </div>
-            <div>
-                <ul class="absoluteCondiciones">
-                    <li>
-                        <a class="linksExternos href="" >Condiciones de uso</a>
-                        <a class="linksExternos href="">Aviso de privacidad </a>
-                    </li>
-                </ul>
-                <p class="parrafos absoluteReservados">Todos los derechos reservados - JDL®</p>
+
+        </section>
+        <footer class="container-fluid flexFooter2">
+            <div class="row">
+                <div class="col">
+                    <p class="parrafos">Nuestras redes</p>
+                    <a href="https://www.instagram.com/" class="linksExternos target="_blank">Instragram</a>
+                    <img src="./assets/imagenes/Instagram.svg" class="imagenesVectorizadas" alt="Instagram">
+                    <a href="https://www.twitch.tv/" class="linksExternos target="_blank">Twitch</a>
+                    <img src="./assets/imagenes/twitch6.svg" class="imagenesVectorizadas" alt="Twitch">
+                    <a href="https://www.reddit.com/" class="linksExternos target="_blank">Reddit</a>
+                    <img src="./assets/imagenes/reddit2.svg" class="imagenesVectorizadas" alt="Reddit">
+                    <a href="https://store.steampowered.com/" class="linksExternos target="_blank">Steam</a>
+                    <img src="./assets/imagenes/steam.svg" class="imagenesVectorizadas" alt="Steam">
+                </div>
+                <div class="col">
+                    <p class="parrafos">Todos los derechos reservados - JDL®</p>
+                </div>
+                <div class="col">
+                    <a class="linksExternos href="" >Condiciones de uso</a>
+                    <a class="linksExternos href="">Aviso de privacidad </a>
+                </div>
             </div>
         </footer>
+        <script src="./js/bootstrap.bundle.min.js"></script>
     </body>
 </html>|
