--- a/pages/videojuegos.html
+++ b/pages/videojuegos.html
@@ -11,31 +11,22 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body>
-        <header>
+        <header class="elHeaderBox flexHeader">
             <div>
-                <nav class="navbar navbar-expand-lg navbar-light bg-violet">
-                    <div class="container-fluid elHeaderBox">
-                      <button class="navbar-toggler"  type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon bg-white"></span>
-                      </button>
-                      <a class="navbar-brand" href="../index.html"> <img src="../assets/imagenes/Logo final.png" alt="" width="100" height="100"></a>
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                          <li class="nav-item dropdown desplegarNav">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorias </a>
-                            <ul class="dropdown-menu contenidoNav" aria-labelledby="navbarDropdown">
-                              <li><a class="dropdown-item" href="../index.html">Inicio</a></li>
-                              <li><a class="dropdown-item" href="./gaming.html">Gaming</a></li>
-                              <li><a class="dropdown-item" href="#">Videojuegos</a></li>
-                              <li><a class="dropdown-item" href="./pages/streaming.html">Streaming<a><li>
-                              <li><a class="dropdown-item" href="./pages/contacto.html">Contacto</a></li>
-                            </ul>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </nav>
+                <a href="../index.html"><img src="../assets/imagenes/Logo final.png" class="elLogo"  alt="logo"></a>
             </div>
+            <nav>
+                <div class="desplegarNav">
+                    <button class="botonNav">Categorias</button>
+                    <div class="contenidoNav">
+                        <li> <a href="../index.html">Inicio </a></li>
+                        <li> <a href="./gaming.html">Gaming</a></li>
+                        <li> <a href="#">Videojuegos</a></li>
+                        <li> <a href="./streaming.html">Streaming</a></li>
+                        <li> <a href="./contacto.html">contacto</a></li>
+                    </div>
+                </div>
+            </nav>
         </header>
         <main>
             <h1>The Gamer's Shire</h1>
