--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <header class="elHeaderBox flexHeader">
             <div>
-                <a href="./index.html"><img src="./assets/imagenes/Logo final.png" class="container-sm elLogo"  alt="logo"></a>
+                <a href="./index.html"><img src="./assets/imagenes/Logo final.png" class="elLogo"  alt="logo"></a>
             </div>
             <nav>
                 <div class="desplegarNav">
@@ -41,7 +41,7 @@
                     <div class="col">
                         <img src="./assets/imagenes/Ibai.jpg" class="boxImg" alt="ibai - Deportes y entretenimiento">
                         <h4 class="subtitulos4">ibai - Deportes y entretenimiento</h4>
-                        <a href="https://www.twitch.tv/ibai" class="linksExternos target="_blank">ibai Twitch</a>
+                        <a href="https://www.twitch.tv/ibai" class="linksExternos" target="_blank">ibai Twitch</a>
                     </div>
                     <div class="col">
                         <img src="./assets/imagenes/luquitarodriguez.png" class="boxImg" alt="luquitarodriguez - humor y entretenimiento">
@@ -49,32 +49,29 @@
                         <a href="https://www.twitch.tv/luquitarodriguez" class="linksExternos target="_blank"> luquitarodriguez Twitch</a>
                     </div>
                 </div>
- 
             </section>
-
             <h3 class="subtitulos3 boxSubtitulos">Mision</h3>
             <div class="contenedorFlex">
                 <p class="parrafos">En The Gamer's Shire trabajamos para brindarte un lugar donde puedas encontrar todo lo relacionado con tus juegos favoritos. 
                     Nos enfocamos en reunir todo su contenido en un solo lugar, contamos con streamer especializados, tu lore favorito, reseñas, proximos eventos y mucho mas.
                     Tambien podes conseguir juegos, hardware y tus consolas favoritas. Unite a la comunidad.</p>
             </div>
- 
         </main>
         <h3 class="subtitulos3 boxSubtitulos">Arma tu Setup</h3>
         <section class="container contenedorFlex">
             <div class="row">
                 <div class="col">
-                    <img src="./assets/imagenes/nvidia gforce 3060.webp" class="boxImg alt="placa de video">
+                    <img src="./assets/imagenes/nvidia gforce 3060.webp" class="boxImg" alt="placa de video">
                     <p class="parrafos">Nvidia Gigabyte GeForce RTX 30 Series RTX 3060</p>
                     <a href="https://www.mercadolibre.com.ar/placa-de-video-nvidia-gigabyte-gaming-geforce-rtx-30-series-rtx-3060-gv-n3060gaming-oc-12gd-rev-10-oc-edition-12gb/p/MLA18618581?pdp_filters=category:MLA1658#searchVariation=MLA18618581&position=8&search_layout=grid&type=product&tracking_id=3868caae-c69d-4b9d-bad2-60e4cbe7f5c3" class="linksExternos target="_blank">Nvidia GeForce RTX 3060</a>
                 </div>
                 <div class="col">
-                    <img src="./assets/imagenes/auriculares hyperx.webp" class="boxImg alt="Auriculares hyperx">
+                    <img src="./assets/imagenes/auriculares hyperx.webp" class="boxImg" alt="Auriculares hyperx">
                     <p class="parrafos">Auriculares inalámbricos HyperX Cloud Flight con luz rojo</p>
                     <a href="https://www.mercadolibre.com.ar/auriculares-gamer-inalambricos-hyperx-cloud-flight-negro-con-luz-rojo-led/p/MLA15313319?matt_tool=80203390&matt_word=&matt_source=google&matt_campaign_id=14545592783&matt_ad_group_id=125221141365&matt_match_type=&matt_network=g&matt_device=c&matt_creative=544135253008&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=139868337&matt_product_id=MLA15313319-product&matt_product_partition_id=1701193342077&matt_target_id=aud-1659384947926:pla-1701193342077&gclid=Cj0KCQjwnbmaBhD-ARIsAGTPcfUzWhfTRg0z8VMl7XHecWAmXPzCI0vPCxbHXOP4QQ4oLNykCRLmdZwaArrOEALw_wcB" class="linksExternos target="_blank">Auriculares HyperX</a>
                 </div>
                 <div class="col">
-                    <img src="./assets/imagenes/monitor.webp" class="boxImg alt="Monitor Gigabyte 27''">
+                    <img src="./assets/imagenes/monitor.webp" class="boxImg alt="Monitor Gigabyte 27'">
                     <p class="parrafos">Monitor gamer Gigabyte G27F led 27 " negro 100V/240V</p>
                     <a href="https://www.mercadolibre.com.ar/monitor-gamer-gigabyte-g27f-led-27-negro-100v240v/p/MLA16550870?pdp_filters=category:MLA14407#searchVariation=MLA16550870&position=4&search_layout=grid&type=product&tracking_id=011c78d9-179e-4896-8996-93dd791dee02" class="linksExternos target="_blank">Monitor gamer Gigabyte</a>
                 </div>
@@ -84,19 +81,19 @@
         <section class="container contenedorFlex">
             <div class="row">
                 <div class="col">
-                    <img src="./assets/imagenes/Elden ring.jpg" class="boxImg alt="Elden Ring">
+                    <img src="./assets/imagenes/Elden ring.jpg" class="boxImg" alt="Elden Ring">
                     <h4 class="subtitulos4">Elden Ring</h4>
                     <a href="https://store.steampowered.com/app/1245620/ELDEN_RING/" class="linksExternos target="_blank"> Elden Ring -   Steam</a>
                 </div>
                 <div class="col">
-                    <img src="./assets/imagenes/Proyect zomboid.jpg" class="boxImg alt="Proyect Zomboid">
+                    <img src="./assets/imagenes/Proyect zomboid.jpg" class="boxImg" alt="Proyect Zomboid">
                     <h4 class="subtitulos4">Proyect Zomboid</h4>
                     <a href="https://store.steampowered.com/app/108600/Project_Zomboid/"  class="linksExternos target="_blank">Proyect Zomboid - Steam</a>
                 </div>
                 <div class="col">
-                    <img src="./assets/imagenes/resident evil 2 remake.jpg" class="boxImg alt="Resident evil 2">
+                    <img src="./assets/imagenes/resident evil 2 remake.jpg" class="boxImg" alt="Resident evil 2">
                     <h4 class="subtitulos4">Resident Evil 2: Remake</h4>
-                    <a href="https://store.steampowered.com/app/883710/Resident_Evil_2/"  class="linksExternos target="_blank">Resident Evil 2: Remake - Steam</a>
+                    <a href="https://store.steampowered.com/app/883710/Resident_Evil_2/"  class="linksExternos" target="_blank">Resident Evil 2: Remake - Steam</a>
                 </div>
             </div>
 
@@ -105,19 +102,19 @@
         <section class="container contenedorFlex">
             <div class="row">
                 <div class="col">
-                    <img src="./assets/imagenes/Wow 1.jpg" class="boxImg alt="Lore World of Warcraft">
+                    <img src="./assets/imagenes/Wow 1.jpg" class="boxImg" alt="Lore World of Warcraft">
                     <br>
-                    <a href="https://wow.fandom.com/es/wiki/Historia_de_Warcraft#L%C3%ADnea_Temporal"  class="linksExternos target="_blank">World of Warcraft</a>
+                    <a href="https://wow.fandom.com/es/wiki/Historia_de_Warcraft#L%C3%ADnea_Temporal"  class="linksExternos" target="_blank">World of Warcraft</a>
                 </div>
                 <div class="col">
-                    <img src="./assets/imagenes/cyberpunk 2077.jpg" class="boxImg alt="cyberpunk 2077">
+                    <img src="./assets/imagenes/cyberpunk 2077.jpg" class="boxImg" alt="cyberpunk 2077">
                     <br>
                     <a href="https://cyberpunk.fandom.com/es/wiki/Cyberpunk_2077" class="linksExternos target="_blank">Cyberpunk 2077</a>
                 </div>
                 <div class="col">
                     <img src="./assets/imagenes/Poe.jpg" class="boxImg" alt="Path of Exile">
                     <br>
-                    <a href="https://www.mediavida.com/foro/poe/lore-videos-castellano-historia-juego-580512" class="linksExternos target="_blank">Path of Exile</a>
+                    <a href="https://www.mediavida.com/foro/poe/lore-videos-castellano-historia-juego-580512" class="linksExternos" target="_blank">Path of Exile</a>
                 </div>
             </div>
 
@@ -125,13 +122,13 @@
         <footer class="container-fluid flexFooter2">
             <div class="row">
                 <div class="col">
-                    <a href="https://www.instagram.com/" class="linksExternos  target="_blank">Instragram</a>
+                    <a href="https://www.instagram.com/" class="linksExternos"  target="_blank">Instragram</a>
                     <img src="./assets/imagenes/Instagram.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Instagram">
-                    <a href="https://www.twitch.tv/" class="linksExternos target="_blank">Twitch</a>
+                    <a href="https://www.twitch.tv/" class="linksExternos" target="_blank">Twitch</a>
                     <img src="./assets/imagenes/twitch6.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Twitch">
-                    <a href="https://www.reddit.com/" class="linksExternos target="_blank">Reddit</a>
+                    <a href="https://www.reddit.com/" class="linksExternos" target="_blank">Reddit</a>
                     <img src="./assets/imagenes/reddit2.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Reddit">
-                    <a href="https://store.steampowered.com/" class="linksExternos target="_blank">Steam</a>
+                    <a href="https://store.steampowered.com/" class="linksExternos" target="_blank">Steam</a>
                     <img src="./assets/imagenes/steam.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Steam">
                 </div>
                 <div class="col">
