Pre Entrega Tres sin SEO

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>The Gamer's Shire</title>
         <link rel="shortcut icon" href="./assets/imagenes/Logo final.png" type="icono pagina" />
         <link rel="stylesheet" href="./css/bootstrap.min.css">
-        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="./css/estilos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body>
@@ -42,6 +42,7 @@
         </header>
         <main>
             <h1>The Gamer's Shire</h1>
+            <h2 class="claseH2">Nuestras Recomendaciones </h2>
             <h3 class="subtitulos3 boxSubtitulos">Streaming mas vistos por la comunidad</h3>
             <section class="container contenedorFlex">
                 <div class="row">
@@ -56,20 +57,19 @@
                         <a href="https://www.twitch.tv/ibai" class="linksExternos" target="_blank">ibai Twitch</a>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-3">
-                        <img src="./assets/imagenes/luquitarodriguez.png" class="boxImg" alt="luquitarodriguez - humor y entretenimiento">
+                        <img src="./assets/imagenes/luquitarodriguez.png" class="boxImg" alt="luquitarodrigue - humor y entretenimiento">
                         <h4 class="subtitulos4">luquitarodriguez - humor y entretenimiento</h4>
                         <a href="https://www.twitch.tv/luquitarodriguez" class="linksExternos target="_blank"> luquitarodriguez Twitch</a>
                     </div>
                 </div>
             </section>
-            <h3 class="subtitulos3 boxSubtitulos">Mision</h3>
+            <h3 class="subtitulos3 boxSubtitulos">Nuestra razón de existir</h3>
             <div class="contenedorFlex">
-                <p class="parrafos">En The Gamer's Shire trabajamos para brindarte un lugar donde puedas encontrar todo lo relacionado con tus juegos favoritos. 
+                <p class="parrafosMision">En The Gamer's Shire trabajamos para brindarte un lugar donde puedas encontrar todo lo relacionado con tus juegos favoritos. 
                     Nos enfocamos en reunir todo su contenido en un solo lugar, contamos con streamer especializados, tu lore favorito, reseñas, proximos eventos y mucho mas.
                     Tambien podes conseguir juegos, hardware y tus consolas favoritas. Unite a la comunidad.</p>
             </div>
-        </main>
-        <h3 class="subtitulos3 boxSubtitulos">Arma tu Setup</h3>
+            <h3 class="subtitulos3 boxSubtitulos">Arma tu Setup</h3>
         <section class="container contenedorFlex">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
@@ -131,24 +131,25 @@
             </div>
 
         </section>
+        </main>        
         <footer class="container-fluid flexFooter2">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <a href="https://www.instagram.com/" class="linksExternos"  target="_blank">Instragram</a>
+                    <a href="https://www.instagram.com/" class="linksFooter"  target="_blank">Instragram</a>
                     <img src="./assets/imagenes/Instagram.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Instagram">
-                    <a href="https://www.twitch.tv/" class="linksExternos" target="_blank">Twitch</a>
+                    <a href="https://www.twitch.tv/" class="linksFooter" target="_blank">Twitch</a>
                     <img src="./assets/imagenes/twitch6.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Twitch">
-                    <a href="https://www.reddit.com/" class="linksExternos" target="_blank">Reddit</a>
+                    <a href="https://www.reddit.com/" class="linksFooter" target="_blank">Reddit</a>
                     <img src="./assets/imagenes/reddit2.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Reddit">
-                    <a href="https://store.steampowered.com/" class="linksExternos" target="_blank">Steam</a>
+                    <a href="https://store.steampowered.com/" class="linksFooter" target="_blank">Steam</a>
                     <img src="./assets/imagenes/steam.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Steam">
                 </div>
                 <div class="col-sm-12 col-md-5 col-lg-4">
-                    <p class="parrafos">Todos los derechos reservados - JDL®</p>
+                    <p class="parrafosFooter">Todos los derechos reservados - JDL®</p>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-3">
-                    <a class="linksExternos href="" >Condiciones de uso</a>
-                    <a class="linksExternos href="">Aviso de privacidad </a>
+                    <a class="linksFooter" href="" >Condiciones de uso</a>
+                    <a class="linksFooter" href="">Aviso de privacidad </a>
                 </div>
             </div>
         </footer>
