--- a/pages/streaming.html
+++ b/pages/streaming.html
@@ -7,7 +7,7 @@
         <title>The Gamer's Shire</title>
         <link rel="shortcut icon" href="../assets/imagenes/Logo final.png" type="icono pagina" />
         <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body>
@@ -46,17 +46,17 @@
             <h3 class="subtitulos3 boxSubtitulos">Canales Especializados</h3>
             <section  class="container contenedorFlex">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-sm-12 col-md-6 col-lg-4">
                         <img src="../assets/imagenes/migguztv.png" class="boxImg" alt="MigguzTV">
                         <h4  class="subtitulos4">MigguzTV - Canal especializado en World of Warcraft</h4>
                         <a href="https://www.twitch.tv/search?term=migguztv" class="linksExternos" target="_blank">MigguzTV</a>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-12 col-md-5 col-lg-4">
                         <img src="../assets/imagenes/nicro4fun.jpg" class="boxImg" alt="Nicro4fun">
                         <h4 class="subtitulos4">nicro4fun - Canal especializado en RPG - Poe, Diablo.</h4>
                         <a href="https://www.twitch.tv/nicro4fun" class="linksExternos" target="_blank">Nicro4fun</a>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-12 col-md-12 col-lg-3">
                         <img src="../assets/imagenes/froggerOW.png" class="boxImg" alt="FroggerOW">
                         <h4 class="subtitulos4">FroggerOW - Canal Especializado en Overwatch 2</h4>
                         <a href="https://www.twitch.tv/froggerow" class="linksExternos" target="_blank">FroggerOW</a>
@@ -66,68 +66,67 @@
             <h3 class="subtitulos3 boxSubtitulos">Recomendados del editor</h3>
             <section class="container contenedorFlex">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-sm-12 col-md-6 col-lg-4">
                         <img src="../assets/imagenes/duendepablo.jpg" class="boxImg" alt="Duendepablo">
                         <h4 class="subtitulos4" >DuendePablo - Gaming, IRL, Entretenimiento</h4>
                         <a href="https://www.twitch.tv/duendepablo" class="linksExternos" target="_blank">Duendepablo</a>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-12 col-md-5 col-lg-4">
                         <img src="../assets/imagenes/robergalatti.jpg" class="boxImg" alt="Roberto Galati">
                         <h4  class="subtitulos4">robergalati - IRL, gaming, humor</h4>
                         <a href="https://www.twitch.tv/search?term=robergalati" class="linksExternos" target="_blank">Robergalati</a>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-12 col-md-6 col-lg-3">
                         <img src="../assets/imagenes/baity.png" class="boxImg" alt="Baitybait">
                         <h4  class="subtitulos4">BaityBait - industria del gaming y humor</h4>
                         <a href="https://www.twitch.tv/baitybait" class="linksExternos" target="_blank">Baitybait</a>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-12 col-md-5 col-lg-12">
                         <img src="../assets/imagenes/tomasrebord.png" class="boxImg" alt="Tomas Rebord">
                         <h4  class="subtitulos4">tomasrebord - Politica, entrevistas y Entretenimiento</h4>
                         <a href="https://www.twitch.tv/tomasrebord" class="linksExternos" target="_blank">tomasrebord</a>
                     </div>
                 </div>
             </section>
-        </main>
-        <h3 class="subtitulos3 boxSubtitulos">Musica</h3>
+            <h3 class="subtitulos3 boxSubtitulos">Musica</h3>
         <section class="container contenedorFlex">
             <div class="row">
-                <div class="col">
+                <div class="col-sm-12 col-md-6 col-lg-4">
                     <img src="../assets/imagenes/djmiss shelton.png" class="boxImg" alt="Dj Miss Shelton">
                     <h4   class="subtitulos4">DJMissShelton - DJ Party</h4>
                     <a href="https://www.twitch.tv/djmissshelton" class="linksExternos" target="_blank">DjMissShelton</a>
                 </div>
-                <div class="col">
+                <div class="col-sm-12 col-md-5 col-lg-4">
                     <img src="../assets/imagenes/sintica.png" class="boxImg" alt="Sintica">
                     <h4  class="subtitulos4">Sintica - DJ House</h4>
                     <a href="https://www.twitch.tv/sintica" class="linksExternos" target="_blank">Sintica</a>
                 </div>
-                <div class="col">
+                <div class="col-sm-12 col-md-12 col-lg-3">
                     <img src="../assets/imagenes/chillhop.png" class="boxImg" alt="Chillhop Music">
                     <h4  class="subtitulos4">ChillhopMusic -  Radio  jazzy & lofi hip hop beats</h4>
                     <a href="https://www.twitch.tv/chillhopmusic" class="linksExternos" target="_blank">ChillhopMusic</a>
                 </div>
-            </div>
-          
+            </div>          
         </section>
+        </main>        
         <footer class="container-fluid flexFooter2">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <a href="https://www.instagram.com/" class="linksExternos"  target="_blank">Instragram</a>
+                    <a href="https://www.instagram.com/" class="linksFooter"  target="_blank">Instragram</a>
                     <img src="../assets/imagenes/Instagram.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Instagram">
-                    <a href="https://www.twitch.tv/" class="linksExternos target="_blank">Twitch</a>
+                    <a href="https://www.twitch.tv/" class="linksFooter" target="_blank">Twitch</a>
                     <img src="../assets/imagenes/twitch6.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Twitch">
-                    <a href="https://www.reddit.com/" class="linksExternos" target="_blank">Reddit</a>
+                    <a href="https://www.reddit.com/" class="linksFooter" target="_blank">Reddit</a>
                     <img src="../assets/imagenes/reddit2.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Reddit">
-                    <a href="https://store.steampowered.com/" class="linksExternos" target="_blank">Steam</a>
+                    <a href="https://store.steampowered.com/" class="linksFooter" target="_blank">Steam</a>
                     <img src="../assets/imagenes/steam.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Steam">
                 </div>
                 <div class="col-sm-12 col-md-5 col-lg-4">
                     <p class="parrafos">Todos los derechos reservados - JDL®</p>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-3">
-                    <a class="linksExternos href=" >Condiciones de uso</a>
-                    <a class="linksExternos href=">Aviso de privacidad </a>
+                    <a class="linksFooter" href="" >Condiciones de uso</a>
+                    <a class="linksFooter" href="">Aviso de privacidad </a>
                 </div>
             </div>
         </footer>
