--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
         <title>The Gamer's Shire</title>
         <link rel="shortcut icon" href="../assets/imagenes/Logo final.png" type="icono pagina" />
         <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body>
@@ -66,10 +66,10 @@
                 </form>
             </section>
         </main>
-        <section class="container contenedorFlex" >
-            <h4 class="subtitulos4">Proximos Eventos</h4>
+        <section class="container contenedorFlexContactos" >
+            <h4 class="subtitulos4Contactos">Proximos Eventos</h4>
             <div>
-                <p class="parrafos">21 OCTUBRE 2022
+                <p class="parrafosContactos">21 OCTUBRE 2022
 
                     ARGENTINA GAME SHOW
                     
@@ -81,7 +81,7 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13141.32391365323!2d-58.3964251!3d-34.5704909!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8e5455ca015bc690!2sArgentina%20Game%20Show!5e0!3m2!1ses!2sar!4v1666131222207!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div>
-                <p class="parrafos">
+                <p class="parrafosContactos">
                     5 NOVIEMBRE 2022
                 
                     EGS 2022 - Entertainment Gaming Show
@@ -95,21 +95,21 @@
         <footer class="container-fluid flexFooter2">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <a href="https://www.instagram.com/" class="linksExternos"  target="_blank">Instragram</a>
+                    <a href="https://www.instagram.com/" class="linksFooter"  target="_blank">Instragram</a>
                     <img src="../assets/imagenes/Instagram.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Instagram">
-                    <a href="https://www.twitch.tv/" class="linksExternos target="_blank">Twitch</a>
+                    <a href="https://www.twitch.tv/" class="linksFooter" target="_blank">Twitch</a>
                     <img src="../assets/imagenes/twitch6.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Twitch">
-                    <a href="https://www.reddit.com/" class="linksExternos" target="_blank">Reddit</a>
+                    <a href="https://www.reddit.com/" class="linksFooter" target="_blank">Reddit</a>
                     <img src="../assets/imagenes/reddit2.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Reddit">
-                    <a href="https://store.steampowered.com/" class="linksExternos" target="_blank">Steam</a>
+                    <a href="https://store.steampowered.com/" class="linksFooter" target="_blank">Steam</a>
                     <img src="../assets/imagenes/steam.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Steam">
                 </div>
                 <div class="col-sm-12 col-md-5 col-lg-4">
                     <p class="parrafos">Todos los derechos reservados - JDL®</p>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-3">
-                    <a class="linksExternos href="" >Condiciones de uso</a>
-                    <a class="linksExternos href="">Aviso de privacidad </a>
+                    <a class="linksFooter" href="" >Condiciones de uso</a>
+                    <a class="linksFooter" href="">Aviso de privacidad </a>
                 </div>
             </div>
         </footer>
