--- a/pages/gaming.html
+++ b/pages/gaming.html
@@ -7,7 +7,7 @@
         <title>The Gamer's Shire</title>
         <link rel="shortcut icon" href="../assets/imagenes/Logo final.png" type="icono pagina" />
         <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body>
@@ -40,11 +40,9 @@
                 </div>
               </nav>
         </header>
-        <section>
+        <main>
             <h1>The Gamer's Shire</h1>
             <h2 class="claseH2">GAMING</h2>
-        </section>
-        <main>
             <h3 class="subtitulos3 boxSubtitulos">Consolas</h3>
             <section  class="container contenedorFlex">
                 <div class="row">
@@ -107,7 +105,6 @@
                 </div>
                 
             </section>
-        </main>
             <h3 class="subtitulos3 boxSubtitulos">Giftcards</h3>
             <section class="container contenedorFlex">
                 <div class="row">
@@ -134,24 +131,25 @@
                 </div>
  
             </section>
+        </main>           
             <footer class="container-fluid flexFooter2">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <a href="https://www.instagram.com/" class="linksExternos"  target="_blank">Instragram</a>
+                        <a href="https://www.instagram.com/" class="linksFooter"  target="_blank">Instragram</a>
                         <img src="../assets/imagenes/Instagram.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Instagram">
-                        <a href="https://www.twitch.tv/" class="linksExternos target="_blank">Twitch</a>
+                        <a href="https://www.twitch.tv/" class="linksFooter" target="_blank">Twitch</a>
                         <img src="../assets/imagenes/twitch6.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Twitch">
-                        <a href="https://www.reddit.com/" class="linksExternos" target="_blank">Reddit</a>
+                        <a href="https://www.reddit.com/" class="linksFooter" target="_blank">Reddit</a>
                         <img src="../assets/imagenes/reddit2.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Reddit">
-                        <a href="https://store.steampowered.com/" class="linksExternos" target="_blank">Steam</a>
+                        <a href="https://store.steampowered.com/" class="linksFooter" target="_blank">Steam</a>
                         <img src="../assets/imagenes/steam.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Steam">
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-4">
                         <p class="parrafos">Todos los derechos reservados - JDL®</p>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-3">
-                        <a class="linksExternos href="" >Condiciones de uso</a>
-                        <a class="linksExternos href="">Aviso de privacidad </a>
+                        <a class="linksFooter" href="" >Condiciones de uso</a>
+                        <a class="linksFooter" href="">Aviso de privacidad </a>
                     </div>
                 </div>
             </footer>
